<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?android:attr/actionBarSize"
    android:background="@mipmap/f5"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.Welcome">

    <TextView
        android:layout_marginTop="?android:attr/actionBarSize"
        android:id="@+id/app_name_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/app_name_welcome"
        android:textColor="@color/textColor"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/app_name_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/app_name_to"
        android:textColor="@color/textColor"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name2"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="75sp"/>
    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_slogan"
        android:textColor="@color/textColor"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id ="@+id/continue_button"
        android:text="@string/welcome_screen_button"
        style="@style/welcome_page_button" />
</LinearLayout>
