<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/pager_detail_event_images"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:contentDescription="@string/event_images"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/pager_detail_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:hint="@string/exhibition_title_hint"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pager_detail_event_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/detail_event_name"
            android:hint="@string/exhibition_location"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pager_detail_event_date"
            style="@style/end_of_image_exists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/detail_event_name"
            android:hint="@string/exhibition_date"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />


        <ScrollView
            android:id="@+id/pager_scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/detail_event_location"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/pager_detail_event_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/detail_page_detail_text_hint"
                android:scrollbars="vertical"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </ScrollView>

    </RelativeLayout>

</LinearLayout>