<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/exhibition_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_background"
            android:padding="5dp">

            <TextView
                android:id="@+id/exhibition_title"
                style="@style/end_of_image_exists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ellipsize="end"
                android:hint="@string/exhibition_title_hint"
                android:maxLines="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/exhibition_content"
                style="@style/end_of_image_exists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/exhibition_title"
                android:ellipsize="end"
                android:hint="@string/exhibition_details"
                android:maxLines="2" />

            <TextView
                android:id="@+id/exhibition_location"
                style="@style/end_of_image_exists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:hint="@string/exhibition_location"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/exhibition_date"
                style="@style/end_of_image_exists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:hint="@string/exhibition_date"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>